# bomfilefinder

./: .gitignore  CMakeLists.txt  bomfilefinder.iss.in
include/BOMFileFinder/: BOMDetector.h  MainWindow.h
src/: BOMDetector.cpp  CMakeLists.txt  MainWindow.cpp  main.cpp
src/resources/: bomfilefinder.qrc  bomfilefinder.rc  resources.h
